--- a/modulo1/bloco3/3.2/exercicDeFixação/index.html
+++ b/modulo1/bloco3/3.2/exercicDeFixação/index.html
@@ -4,25 +4,51 @@
     <meta charset="UTF-8">
     <title>HTML</title>
     <style>
+      body{
+        font-size: 16px;
+        font-style:oblique;
+      }
         h1{
-            font-size:65px;
-            color: #ff3c38;
+          font-style:initial;
+          font-size:65px;
+          color: #ff3c38;
+          font-family:sans-serif,helvetica;
         }
         ul{
             background-color:#fff275;
         }
         .nome{
-        background-color:powderblue;
+        background-color:black;
+        }
+        #titulo{
+          color:white;
+          font-size:2em;
+          font-weight:600;
+          line-height:150%;
+        }
+        #pri{
+          background-color:yellow;
+          font-style: inherit;
+          line-height: 6rem;
+        } 
+        #seg{
+          background-color:red;
+          font-style: italic;
+          line-height: 60px;
+        } 
+        #ter {
+          background-color:brown;
+          line-height: 3cm;
         }
     </style>
   </head>
   <body>
     <h1>Exercícios 3.2</h1>
-    <p class="nome">Qual é a sua cor favorita?</p>
+    <p id="titulo" class="nome">Qual é a sua cor favorita?</p>
     <ul class="nome">
-      <li>Amarelo</li>
-      <li>Vermelho</li>
-      <li>Marrom</li>
+      <li id="pri" >Amarelo</li>
+      <li id="seg" >Vermelho</li>
+      <li id="ter" >Marrom</li>
     </ul>
   </body>
 </html>
