Separando html de css.

--- a/modulo1/bloco3/3.2/exercicDeFixação/index.html
+++ b/modulo1/bloco3/3.2/exercicDeFixação/index.html
@@ -3,44 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>HTML</title>
-    <style>
-      body{
-        font-size: 16px;
-        font-style:oblique;
-      }
-        h1{
-          font-style:initial;
-          font-size:65px;
-          color: #ff3c38;
-          font-family:sans-serif,helvetica;
-        }
-        ul{
-            background-color:#fff275;
-        }
-        .nome{
-        background-color:black;
-        }
-        #titulo{
-          color:white;
-          font-size:2em;
-          font-weight:600;
-          line-height:150%;
-        }
-        #pri{
-          background-color:yellow;
-          font-style: inherit;
-          line-height: 6rem;
-        } 
-        #seg{
-          background-color:red;
-          font-style: italic;
-          line-height: 60px;
-        } 
-        #ter {
-          background-color:brown;
-          line-height: 3cm;
-        }
-    </style>
+   <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <h1>Exercícios 3.2</h1>
