Completando exercicio de fixsção

--- a/modulo1/bloco3/3.4/index.html
+++ b/modulo1/bloco3/3.4/index.html
@@ -4,49 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ranking</title>
-    <style>
-        body{
-        text-align: center;
-        }
-
-        li{
-        display: inline;
-        }
-
-        h1 {
-        text-align: center;
-        }
-
-        .first {
-        background-color: rgb(235, 200, 84);
-        font-size: 20px;
-        height: 50px;
-        text-align: center;
-        width: 200px;
-        margin-left: 43%;
-        margin-right: 57%;
-        display:block;
-        }
-
-        .second {
-        background-color: rgb(219, 219, 219);
-        font-size: 20px;
-        height: 50px;
-        text-align: center;
-        width: 300px;
-        display:inline-block;
-        }
-
-        .third {
-        background-color: rgb(170, 142, 106);
-        font-size: 20px;
-        height: 50px;
-        text-align: center;
-        width: 300px;
-        display:inline-block;
-        }
-
-    </style>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <header>
