--- a/modulo1/bloco3/3.4/exercicio/index.html
+++ b/modulo1/bloco3/3.4/exercicio/index.html
@@ -3,11 +3,48 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <!--insira os elementos aqui-->
     <header>
         <h1>Soco a 80km/h: Conheça o Stomatopoda.</h1>
+        <nav>
+            <p>
+                Pagina inicial
+            </p>
+            <p>
+                Sobre
+            </p>
+            <p>
+                Contatos
+            </p>
+        </nav>
     </header>
+    <section>
+      <article id="artigo">
+    <h3>Fatos sobre o Stomatopoda.</h3>
+        <p>
+            Os olhos são testemunhos da criatividade da evolução.
+            Todos eles fazem as mesmas coisas básicas - detectam a luz e a convertem em sinais elétricos -
+            mas de uma variedade tão maravilhosa de maneiras.
+            Existem olhos simples e compostos, lentes bifocais e rochosas , espelhos e fibras ópticas . 
+            E há olhos que são tão estranhos, tão constantemente surpreendentes, que depois de décadas de pesquisa,
+            os cientistas mal descobriram como funcionam, muito menos por que evoluíram dessa maneira.
+            Para encontrá-los, você precisa dar um mergulho.
+        </p>
+        <img id="camarao" alt="Um clouse nos olhos do animal."src="https://ambientalistasemrede.files.wordpress.com/2012/10/79798224617005215_jy8brw7x_c.jpg">
+        <p>
+            Este é o olho de um camarão mantis - um animal marinho
+            que não é um mantis nem um camarão,
+            mas um parente próximo de caranguejos e lagostas.
+            É um olho composto, feito de milhares de pequenas unidades que detectam                
+            a luz de forma independente. Aqueles na banda média - 
+            a faixa central que você pode ver na foto - são especiais.
+            São eles que deixam o animal ver as cores.   
+        </p>
+   </article>  
+    </section>
+   
   </body>
 </html>
